# VoterAnalysis

./: Pipfile  README.md  app.ipynb  app.py  main.py  pyproject.toml  requirements.txt  style.css
data/: @LibranTechie.png:Zone.Identifier  LibranTechieLogo.png:Zone.Identifier  elections_2022.csv
